--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ title: Minjoo Kim's Resume
 name: Minjoo Kim
 email: mmetalkim@gmail.com
 github: monster-mj
-address: posco apt. 911-2703
+address: posco apt
 postcode: 18429
 city: hwasung
 country: Korea,South
